--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
-
+  .strk {
+    ion-label {
+      text-decoration: line-through;
+    }
+    ion-icon {
+      display: none;
+    }
+  }
 }
